--- a/src/assets/design-system/variables/components/data-display/_avatar.scss
+++ b/src/assets/design-system/variables/components/data-display/_avatar.scss
@@ -1,6 +1,6 @@
-$avatar-background: var(--brand-success-active);
+$avatar-background: var(--brand-interaction-color-success-activated);
 $avatar-sm-size: $space-32;
 $avatar-md-size: $space-56;
 $avatar-lg-size: $space-84;
 $avatar-border-radius: 50%;
-$avatar-border: 1px solid var(--brand-secondary-border-color);
+$avatar-border: 1px solid var(--brand-border-color-medium);
