--- a/src/assets/design-system/variables/components/data-display/_tooltip.scss
+++ b/src/assets/design-system/variables/components/data-display/_tooltip.scss
@@ -1,8 +1,8 @@
-$tooltip-bg: palette-color-level('neutral', 10); // TODO: add token
-$tooltip-color: var(--brand-high-emphasis-text-color-inverse);
+$tooltip-bg: var(--brand-surface-color-high-inverse);
+$tooltip-color: var(--brand-text-color-high-inverse);
 $tooltip-padding: $space-8;
 $tooltip-highlight-color: $tooltip-bg;
-$tooltip-border-radius: $space-8; // TODO: add token
+$tooltip-border-radius: var(--brand-border-radius-md);
 $tooltip-font-size: $text-1;
 $tooltip-line-height: $line-height-1;
 $tooltip-font-weight: $font-weight-regular;
