--- a/src/assets/design-system/variables/components/input-and-actions/_select.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_select.scss
@@ -5,12 +5,12 @@ $select-label-height: $space-16;
 $select-label-gap: $space-4;
 
 // input default
-$select-border-radius: $space-8;
-$select-border: 1px solid var(--brand-primary-border-color);
+$select-border-radius: var(--brand-border-radius-md);
+$select-border: 1px solid var(--brand-border-color-high);
 $select-height: $space-40;
 $select-padding: ($space-12 - $space-2) $space-12;
-$select-color: var(--brand-high-emphasis-text-color);
-$select-placeholder-color: var(--brand-low-emphasis-text-color);
+$select-color: var(--brand-text-color-high);
+$select-placeholder-color: var(--brand-text-color-low);
 $select-background-color: transparent;
 $select-font-family: $font-family;
 $select-font-size: $text-1;
@@ -24,21 +24,21 @@ $select-description-height: $space-16;
 
 // utils
 $select-disabled-disabled-opacity: 0.3;
-$select-outline: var(--brand-shadow-outline);
+$select-outline: var(--brand-outline);
 
 // hover
-$select-border-hover: 1px solid var(--brand-primary-border-color);
+$select-border-hover: 1px solid var(--brand-border-color-high);
 
 // error
 $select-background-error-color: palette-color-level('danger', 1);
-$select-border-error: 1px solid var(--brand-danger-enabled);
+$select-border-error: 1px solid var(--brand-interaction-color-danger-enabled);
 
 // leading icon
 $select-leading-width: $space-40 - $space-4;
 $select-leading-icon-size: $space-20;
-$select-leading-color: var(--brand-high-emphasis-text-color);
+$select-leading-color: var(--brand-text-color-high);
 
 // trailing icon
 $select-trailing-width: $space-40 - $space-4;
 $select-trailing-icon-size: $space-20;
-$select-trailing-color: var(--brand-high-emphasis-text-color);
+$select-trailing-color: var(--brand-text-color-high);
