--- a/src/assets/design-system/variables/components/data-display/_accordion.scss
+++ b/src/assets/design-system/variables/components/data-display/_accordion.scss
@@ -1,5 +1,6 @@
-$accordion-item-header-bg: palette-color-level('neutral', 0); // TODO: add token
+$accordion-item-header-bg: transparent;
+$accordion-item-header-bg-hover: var(--brand-interaction-color-neutral-hovered);
 $accordion-item-header-height: $space-56;
 $accordion-item-header-icon-container-size: $space-40;
 $accordion-item-header-icon-size: $space-24;
-$accordion-item-header-border: 1px solid var(--brand-primary-border-color);
+$accordion-item-header-border: 1px solid var(--brand-border-color-high);
