--- a/src/assets/design-system/variables/components/data-display/_carousel.scss
+++ b/src/assets/design-system/variables/components/data-display/_carousel.scss
@@ -1,19 +1,19 @@
-$carousel-border-radius: $space-16;
+$carousel-border-radius: var(--brand-border-radius-lg);
 
 // indicator
 $carousel-indicator-bottom: $space-32;
 $carousel-indicator-width: $space-8;
 $carousel-indicator-height: $space-4;
-$carousel-indicator-border-radius: $space-2;
+$carousel-indicator-border-radius: var(--brand-border-radius-xs);
 $carousel-indicator-space: $space-4;
 
 // default
-$carousel-indicator-bg: palette-color-level('neutral', 0); // TODO: add token
+$carousel-indicator-bg: var(--brand-surface-color-high);
 $carousel-indicator-opacity: 0.6;
 $carousel-indicator-width-active: $space-16;
 
 // active
-$carousel-indicator-bg-active: palette-color-level('neutral', 0); // TODO: add token
+$carousel-indicator-bg-active: var(--brand-surface-color-high);
 $carousel-indicator-opacity-active: 1;
 
 // pagination
