--- a/src/assets/design-system/variables/components/data-display/_modal.scss
+++ b/src/assets/design-system/variables/components/data-display/_modal.scss
@@ -1,11 +1,12 @@
-$modal-bg: palette-color-level('neutral', 0); // TODO: add token
-$modal-border-radius: $space-8;
-$modal-border: 1px solid var(--brand-primary-border-color);
+$modal-bg: var(--brand-surface-color-high);
+$modal-border-radius: var(--brand-border-radius-md);
+$modal-border: 1px solid var(--brand-border-color-high);
 $modal-close-button-gap: $space-8;
 $modal-close-button-size: $space-24;
-$modal-close-button-outline: var(--brand-shadow-outline);
-$modal-close-button-color: var(--brand-low-emphasis-text-color);
-$modal-close-button-color-hover: var(--brand-medium-emphasis-text-color);
+$modal-close-button-border-radius: var(--brand-border-radius-sm);
+$modal-close-button-outline: var(--brand-outline);
+$modal-close-button-color: var(--brand-text-color-low);
+$modal-close-button-color-hover: var(--brand-text-color-medium);
 $modal-shadow: var(--brand-elevation-1);
 $modal-index: 2001;
 $modal-max-width: 50%;
