--- a/src/assets/design-system/variables/components/input-and-actions/_textarea.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_textarea.scss
@@ -3,12 +3,12 @@ $textarea-label-height: $space-16;
 $textarea-label-gap: $space-4;
 
 // input default
-$textarea-border-radius: $space-8;
-$textarea-border: 1px solid var(--brand-primary-border-color);
+$textarea-border-radius: var(--brand-border-radius-md);
+$textarea-border: 1px solid var(--brand-border-color-high);
 $textarea-height: $space-120;
 $textarea-padding: ($space-12 - $space-2) $space-12;
-$textarea-color: var(--brand-high-emphasis-text-color);
-$textarea-placeholder-color: var(--brand-low-emphasis-text-color);
+$textarea-color: var(--brand-text-color-high);
+$textarea-placeholder-color: var(--brand-text-color-low);
 $textarea-background-color: transparent;
 $textarea-font-family: $font-family;
 $textarea-font-size: $text-1;
@@ -21,11 +21,11 @@ $textarea-description-height: $space-16;
 
 // utils
 $textarea-disabled-disabled-opacity: 0.3;
-$textarea-outline: var(--brand-shadow-outline);
+$textarea-outline: var(--brand-outline);
 
 // hover
-$textarea-border-hover: 1px solid var(--brand-primary-border-color);
+$textarea-border-hover: 1px solid var(--brand-border-color-high);
 
 // error
 $textarea-background-error-color: palette-color-level('danger', 1);
-$textarea-border-error: 1px solid var(--brand-danger-enabled);
+$textarea-border-error: 1px solid var(--brand-interaction-color-danger-enabled);
