--- a/src/assets/design-system/variables/components/input-and-actions/_toggle.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_toggle.scss
@@ -1,24 +1,24 @@
 // toggle states
 // default
-$toggle-bg: var(--brand-tertiary-bg-color);
-$toggle-handle-bg: var(--brand-high-emphasis-text-color);
+$toggle-bg: var(--brand-surface-color-low);
+$toggle-handle-bg: var(--brand-text-color-high);
 
 // hover
-$toggle-bg-hover: var(--brand-tertiary-bg-color);
-$toggle-handle-bg-hover: var(--brand-high-emphasis-text-color);
+$toggle-bg-hover: var(--brand-surface-color-low);
+$toggle-handle-bg-hover: var(--brand-text-color-high);
 
 // checked
-$toggle-bg-checked: var(--brand-primary-focus);
-$toggle-handle-bg-checked: var(--brand-primary-enabled);
+$toggle-bg-checked: var(--brand-surface-color-info);
+$toggle-handle-bg-checked: var(--brand-text-color-info-high);
 
 $toggle-width: $space-32;
 $toggle-height: $space-16;
-$toggle-border-radius: $space-8;
+$toggle-border-radius: var(--brand-border-radius-md);
 
 $toggle-handle-width: $toggle-height - $space-4;
 $toggle-handle-height: $toggle-height - $space-4;
 $toggle-handle-border-radius: 50%;
 
 $toggle-label-gap: $space-8;
-$toggle-outline: var(--brand-shadow-outline);
+$toggle-outline: var(--brand-outline);
 $toggle-disabled-opacity: 0.3;
