--- a/src/assets/design-system/variables/components/navigation/_sidebar.scss
+++ b/src/assets/design-system/variables/components/navigation/_sidebar.scss
@@ -1,22 +1,22 @@
 // Sidebar
-$sidebar-bg: var(--brand-secondary-bg-color);
+$sidebar-bg: var(--brand-surface-color-medium);
 $sidebar-height: 100%;
 $sidebar-width: $space-120 * 2;
 $sidebar-index: 1999;
-$sidebar-outline: var(--brand-shadow-outline);
+$sidebar-outline: var(--brand-outline);
 
 // Group
 $sidebar-group-icon-size: $space-16;
-$sidebar-group-icon-border-radius: $space-2;
+$sidebar-group-icon-border-radius: var(--brand-border-radius-xs);
 
 // Group item
 $sidebar-group-item-height: $space-32;
 $sidebar-group-item-icon-size: $space-20;
-$sidebar-group-item-border-radius: $space-4;
-$sidebar-group-item-color: var(--brand-medium-emphasis-text-color);
-$sidebar-group-item-bg: var(--brand-secondary-bg-color);
+$sidebar-group-item-border-radius: var(--brand-border-radius-sm);
+$sidebar-group-item-color: var(--brand-text-color-medium);
+$sidebar-group-item-bg: var(--brand-surface-color-medium);
 $sidebar-group-item-gap: $space-4;
 
 // hover
-$sidebar-group-item-color-hover: var(--brand-secondary-bg-color);
-$sidebar-group-item-bg-hover: var(--brand-medium-emphasis-text-color);
+$sidebar-group-item-color-hover: var(--brand-surface-color-medium);
+$sidebar-group-item-bg-hover: var(--brand-text-color-medium);
